--- a/frontend/src/styles/AgregarCharacter.css
+++ b/frontend/src/styles/AgregarCharacter.css
@@ -1,6 +1,17 @@
+.agregar-character {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 20px;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
 .title-agregar {
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   margin-left: 20px;
   margin-right: 20px;
   text-shadow: 2px 2px 4px #000000;
