--- a/frontend/src/styles/AgregarCharacter.css
+++ b/frontend/src/styles/AgregarCharacter.css
@@ -1,12 +1,14 @@
-.agregar-character {
+.agregar-character-container {
+  display: flex; 
+  Height: 60vh;
+}
+
+.agregar-character-img {
+  flex: 1;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin: 20px;
-  padding: 20px;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .title-agregar {
@@ -17,10 +19,35 @@
   text-shadow: 2px 2px 4px #000000;
 }
 
+.img-character {
+  width: 500px;
+  height: 500px;
+  object-fit: contain;
+}
+
 .form-agregar {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+}
+
+.logo-character {
+  Height: 120px
+}
+
+.agregar-character-form {
+  flex: 1;
+  padding: 2rem
+}
+
+.boton.img-right {
+  position: absolute;
+  right: 10;
+}
+
+.boton.img-left {
+  position: absolute;
+  left: 10;
 }
