--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -102,9 +102,8 @@
   background-color: #0056b3;
 }
 
-/* Responsividad para pantallas más pequeñas */
 @media (max-width: 1200px) {
   .heros-cards-container {
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Ajusta dinámicamente el número de columnas */
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
   }
 }
