--- a/frontend/src/styles/SuccessMessage.css
+++ b/frontend/src/styles/SuccessMessage.css
@@ -43,7 +43,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,7 +51,7 @@
 }
 
 .success-video-box {
-  background-color: white; /* Fondo blanco */
+  background-color: white; 
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
